<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_repos_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="50sp"/>

    <Button
        android:id="@+id/intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/text"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="130sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/intent_to_users"/>

    <EditText
        android:id="@+id/reposName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/text"
        android:backgroundTint="@color/teal_200"
        android:layout_marginTop="100sp"
        android:layout_marginHorizontal="50sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/input_repos_name"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:id="@+id/user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/reposName"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="130sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/search"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/user_btn"/>

</RelativeLayout>