<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.UserActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_username"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="50sp"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/text"
        android:backgroundTint="@color/teal_200"
        android:layout_marginTop="100sp"
        android:layout_marginHorizontal="50sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/input_username"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:id="@+id/user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/userName"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="130sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/search"/>

    <ListView
        android:id="@+id/list_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_btn"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="30sp" />

</RelativeLayout>